; ModuleID = '/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-index.c_writeout_align.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-index.c_writeout_align.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @writeout_align to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @writeout_align(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = call i32 (...) @get_write_pos()
  %5 = sub nsw i32 0, %4
  %6 = load i32, i32* %2, align 4
  %7 = sub nsw i32 %6, 1
  %8 = and i32 %5, %7
  store i32 %8, i32* %3, align 4
  br label %9

9:                                                ; preds = %12, %1
  %10 = load i32, i32* %3, align 4
  %11 = icmp sgt i32 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %9
  %13 = call i32 @writeout_char(i32 0)
  %14 = load i32, i32* %3, align 4
  %15 = add nsw i32 %14, -1
  store i32 %15, i32* %3, align 4
  br label %9

16:                                               ; preds = %9
  ret void
}

declare dso_local i32 @get_write_pos(...) #1

declare dso_local i32 @writeout_char(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
